--- a/index.html
+++ b/index.html
@@ -82,20 +82,25 @@
         </nav>
         <main class="mt-4">
             <section class="row row-cols-2 section__main">
-                <div class="col-9 main_image">
-                    <h1 class="text-white section__main-title">Curabitur interdum pulvinar nibh</h1>
-                    <p class="py-2 text-white section__main-subtitle">
-                        Vestibulum nec arcu ut mauris laoreet ornare. 
-                        Nam aliquet lacus orci, egestas ultrices magna accumsan vitae.
-                        Vestibulum nec arcu ut mauris laoreet ornare. 
-                        Nam aliquet lacus orci, egestas ultrices magna accumsan vitae.
-                    </p>
-                    <button class="text-white text-underline section__main-more">Read more</button>
+                <div class="col-9 main_image position-relative">
+                    <div class="position-absolute top-50">
+                        <h1 class="text-white section__main-title">Curabitur interdum pulvinar nibh</h1>
+                        <p class="py-2 text-white section__main-subtitle">
+                            Vestibulum nec arcu ut mauris laoreet ornare. 
+                            Nam aliquet lacus orci, egestas ultrices magna accumsan vitae.
+                            Vestibulum nec arcu ut mauris laoreet ornare. 
+                            Nam aliquet lacus orci, egestas ultrices magna accumsan vitae.
+                        </p>
+                        <button class="text-white text-underline section__main-more">Read more</button>
+                    </div>
                 </div>
                 <div class="col-3">
-                    <div class="bg-primary p-2 text-white mb-2 section__main-orgs">Our organisations</div>
-                    <div class="mb-2"></div>
-                    <div class="mb-2"></div>
+                    <div class="bg-primary p-4 text-white mb-2 section__main-orgs">Our organisations</div>
+                    <div class="mb-2 section__main-orgs-image p-4"></div>
+                    <div class="mb-2 section__main-orgs-image p-4"></div>
+                    <div class="mb-2 section__main-orgs-image p-4"></div>
+                    <div class="mb-2 section__main-orgs-image p-4"></div>
+                    <div class="mb-2 section__main-orgs-image p-4"></div>
                 </div>
             </section>
         </main>
