full page development

--- a/index.html
+++ b/index.html
@@ -103,7 +103,159 @@
                     <div class="mb-2 section__main-orgs-image p-4"></div>
                 </div>
             </section>
+            <section class="row row-cols-2 mt-5 section__news">
+                <div class="col-9">
+                    <div class="d-flex justify-content-between mb-4">
+                        <div class="">
+                            <button class="prime-btn">Our newss</button>
+                        </div>
+                        <div class="">
+                            <button class="secondary-btn">All news</button>
+                        </div>
+                    </div>
+                    <ul class="section__news-list ms-0">
+                        <li class="section__news-item d-flex">
+                            <div>
+                                <img src="./assets/main.jpg" class="news-item__image" alt="">
+                            </div>
+                            <div class="ms-5">
+                                <h3 class="section__news-title">Lorem ipsum dolor set</h3>
+                                <p class="">Lorem ipsum dolor sit amet, consectetur 
+                                    adipiscing elit, sed do eiusmod tempor incididunt ut labore 
+                                    et dolore magna aliqua. Ut enim ad minim veniam</p>
+                                <div class="d-flex">
+                                    <div class="d-flex section__news-date">
+                                        <img src="" alt="">
+                                        <p>23.11.22</p>
+                                    </div>
+                                    <div class="d-flex section__news-seen">
+                                        <img src="" alt="">
+                                        <p>94303</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="section__news-item d-flex">
+                            <div>
+                                <img src="./assets/main.jpg" class="news-item__image" alt="">
+                            </div>
+                            <div class="ms-5">
+                                <h3 class="section__news-title">Lorem ipsum dolor set</h3>
+                                <p class="">Lorem ipsum dolor sit amet, consectetur 
+                                    adipiscing elit, sed do eiusmod tempor incididunt ut labore 
+                                    et dolore magna aliqua. Ut enim ad minim veniam</p>
+                                <div class="d-flex">
+                                    <div class="d-flex section__news-date">
+                                        <img src="" alt="">
+                                        <p>23.11.22</p>
+                                    </div>
+                                    <div class="d-flex section__news-seen">
+                                        <img src="" alt="">
+                                        <p>94303</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="section__news-item d-flex">
+                            <div>
+                                <img src="./assets/main.jpg" class="news-item__image" alt="">
+                            </div>
+                            <div class="ms-5">
+                                <h3 class="section__news-title">Lorem ipsum dolor set</h3>
+                                <p class="">Lorem ipsum dolor sit amet, consectetur 
+                                    adipiscing elit, sed do eiusmod tempor incididunt ut labore 
+                                    et dolore magna aliqua. Ut enim ad minim veniam</p>
+                                <div class="d-flex">
+                                    <div class="d-flex section__news-date">
+                                        <img src="" alt="">
+                                        <p>23.11.22</p>
+                                    </div>
+                                    <div class="d-flex section__news-seen">
+                                        <img src="" alt="">
+                                        <p>94303</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        
+                    </ul>
+                    <button class="secondary-btn">More news</button>
+                </div>
+                <div class="col-3">
+                    <div class="">Applications</div>
+                    <button class="prime-btn">Gallery</button>
+                    <div class="">
+                        <img src="./assets/main.jpg" alt="">
+                    </div>
+                </div>
+            </section>
+            <section class="section__about mt-5 row row-cols-2">
+                <div class="col-9">
+                    <button class="prime-btn">About us</button>
+                    <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
+                        in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                    </p>
+                    <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
+                        in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                    </p>
+                    <div class="">
+                        <button>More</button>
+                        <button>Our organisations</button>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <img src="./assets/main.jpg" alt="">
+                    <h4>Romankov Jury Ivanovich</h4>
+                    <p>CEO of this Organisation</p>
+                </div>
+            </section>
+            <section class="section__links">
+                <button class="prime-btn">Useful links</button>
+                <div class="links__slider">
+                    <button class="links__slider-arrow">
+                        <img src="" alt="">
+                    </button>
+                    <ul class="row row-cols-4">
+                        <li class="links__slider-item">
+                            <img src="" alt="">
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </main>
+        <footer class="footer row row-cols-3">
+            <div class="col-8 d-flex align-items-baseline">
+                <a href="">
+                    <img src="" alt="">
+                </a>
+                <p class="ms-2 text-uppercase header__logo-text">Curabitur interdum pulvinar nibh eget luctus odio commodo nec. Donec quis ante neque.</p>
+            </div>
+            <div class="col-2">
+                <div class="d-flex align-items-baseline header__phone">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+                    </svg>
+                    <strong class="ms-2 header__phone-text">
+                        <p class="text-dark">89034234789</p>
+                    </strong>
+                </div>
+                <div class="d-flex align-items-baseline mt-2 text-primary header__mail">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                        <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
+                    </svg>
+                    <strong class="ms-2 header__mail-text"><p>info@mail.ru</p></strong>
+                </div>
+            </div>
+            <div class="col-2 ">
+                <button class="btn btn-primary text-white header__btn-ask">Ask a question</button>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
